--- a/ShopManagement/Views/MainWindow.xaml
+++ b/ShopManagement/Views/MainWindow.xaml
@@ -164,6 +164,15 @@
                     FontSize="25">
                     Modifica Date
                 </Button>
+                <Button
+                    x:Name="btnBackToLoginAdmin"
+                    Width="270"
+                    Height="70"
+                    Margin="0,25,0,0"
+                    Click="btnGoToLoginFromAdmin_Click"
+                    FontSize="25">
+                    Go to Login
+                </Button>
             </StackPanel>
             <StackPanel
                 Grid.Column="1"
@@ -458,6 +467,16 @@
                 FontSize="20">
                 Finalizeaza Bon
             </Button>
+            <Button
+                x:Name="btnBackToLoginCasier"
+                Width="270"
+                Height="70"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Bottom"
+                Click="btnBackToLoginCasier_Click"
+                FontSize="25">
+                Go to Login
+            </Button>
 
 
 
@@ -502,6 +521,7 @@
                     x:Name="btnAddUtilizator"
                     Width="200"
                     Height="60"
+                    Margin="0,0,0,30"
                     Command="{Binding AddUtilizatorCommand}"
                     Content="Add Utilizator"
                     FontSize="20">
@@ -513,10 +533,17 @@
                         </MultiBinding>
                     </Button.CommandParameter>
                 </Button>
+                <Button
+                    x:Name="btnAddUtilizatorBackToAdmin"
+                    Width="200"
+                    Height="60"
+                    Click="btnAddUtilizatorBackToAdmin_Click"
+                    Content="Back"
+                    FontSize="20" />
             </StackPanel>
 
         </Grid>
-        <Grid x:Name="AddProdusGrid" Visibility="Visible">
+        <Grid x:Name="AddProdusGrid" Visibility="Collapsed">
             <!--<Grid.DataContext>
                 <ctx:AdminManagementVM />
             </Grid.DataContext>-->
@@ -621,6 +648,7 @@
                     x:Name="btnAddProducator"
                     Width="200"
                     Height="60"
+                    Margin="0,0,0,30"
                     Command="{Binding AddProducatorCommand}"
                     Content="Add Producator"
                     FontSize="20">
@@ -631,6 +659,13 @@
                         </MultiBinding>
                     </Button.CommandParameter>
                 </Button>
+                <Button
+                    x:Name="btnAddProducatorBackToAdmin"
+                    Width="200"
+                    Height="60"
+                    Click="btnAddProducatorBackToAdmin_Click"
+                    Content="Back"
+                    FontSize="20" />
             </StackPanel>
         </Grid>
         <Grid x:Name="AddStocProdusGrid" Visibility="Collapsed">
@@ -705,6 +740,7 @@
                     x:Name="btnAddStocProdus"
                     Width="200"
                     Height="60"
+                    Margin="0,0,0,10"
                     Command="{Binding AddStocProdusCommand}"
                     Content="Add Stoc Produs"
                     FontSize="20">
@@ -719,6 +755,13 @@
                         </MultiBinding>
                     </Button.CommandParameter>
                 </Button>
+                <Button
+                    x:Name="btnAddStocProdusBackToAdminMenu"
+                    Width="200"
+                    Height="60"
+                    Click="btnAddStocProdusBackToAdminMenu_Click"
+                    Content="Back"
+                    FontSize="20" />
             </StackPanel>
         </Grid>
         <Grid
@@ -842,6 +885,16 @@ Text="{Binding ProdusNameVisualizeText, Mode=TwoWay}"
                 FontSize="20"
                 Text="{Binding StocProdusIdVisualizeText, Mode=TwoWay}"
                 TextAlignment="Center" />
+            <Button
+                x:Name="btnVisualizeDataBackToAdmin"
+                Width="200"
+                Height="60"
+                Margin="50"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Bottom"
+                Click="btnVisualizeDataBackToAdmin_Click"
+                Content="Back"
+                FontSize="20" />
         </Grid>
 
         <Grid
@@ -920,6 +973,16 @@ Text="{Binding ProdusNameVisualizeText, Mode=TwoWay}"
                 FontSize="20"
                 Text="{Binding StocProdusIdVisualizeText, Mode=TwoWay}"
                 TextAlignment="Center" />
+            <Button
+                x:Name="btnModifyBackToAdmin"
+                Width="200"
+                Height="60"
+                Margin="50"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Bottom"
+                Click="btnModifyBackToAdmin_Click"
+                Content="Back"
+                FontSize="20" />
         </Grid>
         <Grid
             x:Name="SetActivityGrid"
@@ -949,7 +1012,6 @@ Text="{Binding ProdusNameVisualizeText, Mode=TwoWay}"
                 Width="250"
                 Height="60"
                 Margin="52,218,498,507"
-                Click="btnModificaDateProducator_Click"
                 Command="{Binding ModificaActivitateaProducatoruluiCommand}"
                 FontSize="20">
                 Numele Producatorului
@@ -966,7 +1028,6 @@ Text="{Binding ProdusNameVisualizeText, Mode=TwoWay}"
                 Width="250"
                 Height="60"
                 Margin="497,55,53,670"
-                Click="btnModificaDataUtilizator_Click"
                 Command="{Binding ModificaActivitateaUtilizatoruluiCommand}"
                 FontSize="20">
                 Numele Utilizator
@@ -983,7 +1044,6 @@ Text="{Binding ProdusNameVisualizeText, Mode=TwoWay}"
                 Width="250"
                 Height="60"
                 Margin="497,218,53,507"
-                Click="btnModificaDateStocProdus_Click"
                 Command="{Binding ModificaActivitateaStocProdusCommand}"
                 FontSize="20">
                 Id-ul StocProdus
@@ -996,6 +1056,14 @@ Text="{Binding ProdusNameVisualizeText, Mode=TwoWay}"
                 FontSize="20"
                 Text="{Binding StocProdusIdVisualizeText, Mode=TwoWay}"
                 TextAlignment="Center" />
+            <Button
+                x:Name="btnSetActivityBackToAdmin"
+                Width="200"
+                Height="60"
+                Margin="50"
+                Click="btnSetActivityBackToAdmin_Click"
+                Content="Back"
+                FontSize="20" />
         </Grid>
         <Grid
             x:Name="ModifyProdusGrid"
@@ -1044,7 +1112,16 @@ Text="{Binding ProdusNameVisualizeText, Mode=TwoWay}"
                 FontSize="20">
                 Modifica datele Produsului
             </Button>
-
+            <Button
+                x:Name="btnModifyProdusBackToModidy"
+                Width="200"
+                Height="60"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Bottom"
+                Click="btnModifyProdusBackToModidy_Click"
+                Content="Back"
+                Margin="50"
+                FontSize="20" />
 
 
 
@@ -1096,7 +1173,16 @@ Text="{Binding ProdusNameVisualizeText, Mode=TwoWay}"
                 FontSize="20">
                 Modifica datele Stocului
             </Button>
-
+            <Button
+                x:Name="btnModifyStocProdusBackToModidy"
+                Width="200"
+                Height="60"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Bottom"
+                Margin="50"
+                Click="btnModifyStocProdusBackToModidy_Click"
+                Content="Back"
+                FontSize="20" />
 
 
 
@@ -1148,7 +1234,16 @@ Text="{Binding ProdusNameVisualizeText, Mode=TwoWay}"
                 FontSize="20">
                 Modifica datele Utilizatorului
             </Button>
-
+            <Button
+                x:Name="btnModifyUtilizatorBackToModidy"
+                Width="200"
+                Height="60"
+                HorizontalAlignment="Right"
+                Margin="50"
+                VerticalAlignment="Bottom"
+                Click="btnModifyUtilizatorBackToModidy_Click"
+                Content="Back"
+                FontSize="20" />
 
 
 
@@ -1191,6 +1286,16 @@ Text="{Binding ProdusNameVisualizeText, Mode=TwoWay}"
                 FontSize="20">
                 Modifica datele Producatorului
             </Button>
+            <Button
+                x:Name="btnModifyProducatorBackToModidy"
+                Width="200"
+                Height="60"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Bottom"
+                Margin="50"
+                Click="btnModifyProducatorBackToModidy_Click"
+                Content="Back"
+                FontSize="20" />
 
         </Grid>
 
